# nonebot_plugin_setu4

./: README.md  pyproject.toml  requirements.txt
Download_image/: Download_img.py  README.md
nonebot_plugin_nb2_setu/: get_data.py  setu_message.py
nonebot_plugin_setu4/: __init__.py  config.py  fetch_resources.py  get_data.py  json_manager.py  mamager_handle.py  permission_manager.py  send_setu.py  setu_message.py
